Bug 396710 - Compiling nsAppShell.mm results in cast error. r=smichaud, sr=roc, a=roc